@@ -2,6 +2,12 @@
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL
 # Written by Daniel Robbins (drobbins@gentoo.org)
 
+  18 Aug 2004; Aron Griffis <agriffis@gentoo.org>:
+
+    Fix bug 60719 (request for better error messages from runscript)
+    by allowing errors to show on the screen when they're encountered
+    in wrap_rcscript
+
   13 Aug 2004; Aron Griffis <agriffis@gentoo.org>:
 
     Don't export PS1.  Continuation of bug 26951, comments 60-62.
